<resources>
    <string name="app_name">优酷</string>
    <string name="search_app_name">视频搜索</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="complete">完成</string>
    <string name="edite">编辑</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="logout">登出</string>
    <string name="register">注册</string>
    <string name="wait">等待</string>
    <string name="pause">暂停</string>
    <string name="download">下载</string>
    <string name="upload">我的上传</string>
    <string name="back">返回</string>
    <string name="exit">退出</string>
    <string name="prompt">提示</string>
    <string name="search">搜索</string>
    <string name="settings">设置</string>
    <string name="play">播放</string>
    <string name="detail">详情</string>
    <string name="cache">下载</string>
    <string name="series">选集</string>
    <string name="comment">评论</string>
    <string name="haveseen">历史</string>
    <string name="favorite">收藏</string>
    <string name="unknown">未知</string>
    <string name="refresh">刷新</string>
    <string name="saosao">扫一扫 </string>
    <string name="saosao_login">扫一扫登录 </string>
    <string name="movie">电影</string>
    <string name="teleplay">电视剧</string>
	<string name="play_history">播放历史</string>
	<string name="myyouku">个人中心</string>
	<string name="standard_definition">标清</string>
	<string name="high_definition">高清</string>
	<string name="super_definition">超清</string>
	<string name="tips_no_network">当前无网络连接</string>
	<string name="tips_not_responding">网络不给力，请稍后再试。</string>
	<string name="tips_use_3g">当前使用2G/3G/4G网络</string>
	<string name="tips_exit">再按一次将退出优酷</string>
	<string name="tips_logout">已退出登录</string>
	<string name="close">关闭</string>
	<string name="other_person_info_list">的专辑</string>
	<string name="other_person_info_self_list">专辑</string>
	<string name="other_person_info_self_video">视频</string>
	<string name="other_person_info_video">的视频</string>
	<string name="other_person_info_total">共有</string>
	<string name="other_person_info_total_signle">共</string>
	<string name="other_person_info_total_videos">个视频</string>
	<string name="other_person_info_total_playlist">个专辑</string>
	<string name="other_person_info_update_time">更新时间:</string>
	<string name="other_person_info_fans_count">粉丝数:</string>
	<string name="other_person_info_play_count">总播放数:</string>
	<string name="other_person_info_has_follow">已订阅</string>
	<string name="other_person_info_has_follow_success">订阅成功</string>
	<string name="other_person_info_has_follow_fail">订阅失败，请稍后再试</string>
	<string name="other_person_info_has_cancel_follow_success">已取消订阅</string>
	<string name="other_person_info_has_cancel_follow_fail">取消订阅失败</string>
	<string name="other_person_info_do_follow">订阅</string>
	<string name="other_person_info_no_result_show">TA尚未上传制作任何视频哦</string>
	<string name="other_person_info_follow_need_login">登录后即可添加订阅</string>
	<string name="other_person_info_follow_too_quickly">添加订阅有点频繁哦，休息一下吧</string>
	<string name="other_person_info_follow_to_top">您的订阅数量达到上限啦！</string>
	<string name="other_person_info_follow_cannot_done">这个用户已屏蔽订阅 </string>
    <string name="network_error">网络错误</string>
    <string name="init_update_now">现在升级</string>
    <string name="init_update_nexttime">稍后升级</string>
    <string name="init_dowloading">正在下载新版本</string>
    <string name="init_none_sdcard">下载新版本失败，请确定插入了SD卡并有足够的空间进行升级</string>
    <string name="uploading">上传中...</string>
    <string name="uploading_cancel">上传取消</string>
    <string name="upload_main_queue_exists">此视频已存在于上传队列中</string>
    <string name="upload_main_video_title">标题（必填）</string>
    <string name="upload_main_video_desc">详情（选填）</string>
    <string name="upload_main_default_category">原创</string>
    <string name="upload_main_exceeds_maximum">上传队列已满，请等待正在上传的视频成功上传后重试</string>
    <string name="upload_task_scrap">无法上传此视频，请删除</string>
    <string name="upload_setting_not_allow">您当前设置了仅WIFI上传，请检查网络设置</string>
    <string name="agree">我已阅读并接受上传协议</string>
    <string name="none_camera">非常抱歉，您的手机不支持视频录制功能</string>
    <string name="select_video">选择视频</string>
    <string name="none_video">请确认上传的是视频文件</string>
    <string name="upload_agreement">不含有反动政治、黄色、严重暴力的内容。\n不侵犯其他任何人的合法权益。\n不含有版权问题的影视片段。</string>
    <string name="upload_main_alert_none_video">您还没有选择要上传的视频</string>
    <string name="upload_main_alert_none_title">您还没有填入标题</string>
    <string name="upload_main_alert_number_title">标题栏不可只用数字表示</string>
    <string name="upload_main_alert_length_title">标题 长度为 2-50 个半角字符</string>
    <string name="upload_main_alert_none_agreement">请仔细阅读上传协议后，勾选已读协议选项</string>
    <string name="upload_success_verify">上传成功，审核中</string>
    <string name="uploading_file_not_exist">视频上传失败，原视频文件已不存在</string>
    <string name="upload_get_category_failure">获取分类失败，请重试</string>
    <string name="info_toast_up1">已顶过</string>
    <string name="info_toast_up1_down">您已经顶过，不能踩</string>
    <string name="info_toast_down1">已踩过</string>
    <string name="info_toast_down1_up">您已经踩过，不能顶</string>
    <string name="info_toast_fav_new1">已收藏</string>
    <string name="info_toast_fav_new2">该节目收藏失败</string>
    <string name="info_toast_fav_new3">该视频收藏失败</string>
    <string name="info_toast_fav_new4">收藏失败</string>
    <string name="info_toast_fav_1">参数错误</string>
    <string name="info_toast_fav_2">用户尚未登录</string>
    <string name="info_toast_fav_3">视频不存在</string>
    <string name="info_toast_fav_4">已收藏</string>
    <string name="info_toast_fav_5">收藏失败</string>
    <string name="info_toast_fav_6">收藏失败，网络异常</string>
    <string name="favorite_showlist_tab_text">节目</string>
    <string name="favorite_showlist_update_logo">更新</string>
    <string name="favorite_videolist_tab_text">视频</string>
    <string name="favorite_album_tab_text">专辑收藏</string>
	<string name="login_success">登录成功！</string>
	<string name="enter_user_name">请输入您的用户名</string>
	<string name="user_login_fail">您的用户名和密码不匹配，请再输入试试吧！</string>
	<string name="register_success">注册成功！</string>
	<string name="login_error_unknown">数据连接失败，请稍后再试</string>
	<string name="user_login_error_no_user">此用户不存在</string>
    <string name="user_login_error_wrong_email">邮箱地址不正确</string>
	<string name="user_login_tip_comment">登录后可发表评论</string>
    <string name="user_login_tip_share">登录后可分享视频</string>
    <string name="user_login_tip_pay">观看付费视频请先登录</string>
    <string name="user_login_tip_buy_vip">购买请先登录</string>
    <string name="login_user_name_hint">昵称/邮箱/手机</string>
    <string name="regist_user_email_hint">输入邮箱</string>
    <string name="regist_user_email_tip">邮箱地址不正确</string>
    <string name="regist_user_email_tip_exists">该邮箱已注册</string>
    <string name="regist_user_email_tip_empty">邮箱不能为空</string>
    <string name="regist_user_name_hint">输入昵称</string>
    <string name="regist_user_name_tip">2-8个汉字或者4-16个字符（中文、字母、数字、下划线或减号）</string>
    <string name="regist_user_name_tip_exists">该昵称已被别人抢注啦</string>
    <string name="regist_user_name_tip_empty">昵称不能为空</string>
    <string name="regist_user_pwd1_tip">6-16位数字、字母和符号，区分大小写 </string>
    <string name="regist_user_pwd1_hint_text">设定六位以上密码 </string>
    <string name="regist_user_pwd1_tip_empty">密码不能为空</string>
    <string name="regist_user_pwd2_hint">确认密码</string>
    <string name="regist_statement">版权声明</string>
    <string name="regist_agreement">优酷注册协议</string>
	<string name="regist_user">同意并注册</string>
	<string name="user_code_fail">验证码错误，请重新输入</string>
    <string name="conn">连接</string>
    <string name="my_upload">我的上传</string>
    <string name="player_more">更多</string>
    <string name="account_changed">帐号已发生变更，请重新登录后再试</string>
    <string name="src_file_not_exists">源视频文件不存在，请确认SD卡是否被挂载</string>
    <string name="duplicate_upload">上传失败，您已经上传过此视频</string>
    <string name="upload_alert_network">当前正在使用运营商网络上传！</string>
    <string name="uploaded">上传成功</string>
    <string name="uploading_tips1">视频正在上传，您可在我的上传内查看状态</string>
    <string name="player_bt_retry">重试</string>
    <string name="player_tip_loading">即将为您播放</string>
    <string name="share">分享</string>
    <string name="favor">收藏</string>
    <string name="hour">"h"</string>
    <string name="minute">" m"</string>
    <string name="second">"s"</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松手刷新</string>
    <string name="pull_to_refresh_refreshing_label">载入中</string>
    <string name="filter_title">筛选条件</string>
    <string name="text_login_err_email_not_verified">邮箱未验证,请先验证再登录</string>
    <string name="welcome_go_download">本地视频</string>
    <string name="download_add_more">添加下载更多剧集</string>
    <string name="download_exist_not_finished">该视频已在您的下载列表中</string>
    <string name="download_exist_finished">该视频已下载完成</string>
    <string name="download_add_success">添加下载成功</string>
    <string name="download_no_sdcard">木有发现存储设备，请插入SD卡试试</string>
    <string name="download_no_space">空间不足，请删除些内容再下载</string>
    <string name="download_timeout">网络不给力，正在下载的视频已暂停。</string>
	<string name="download_no_network">网络已断开，正在下载的视频将在网络连接恢复后续传。</string>
    <string name="download_unknown_error">该视频暂不支持下载</string>
    <string name="download_write_fail">储存本地视频信息失败</string>
    <string name="download_many_fail">S个正下载，F个暂无下载版权</string>
    <string name="download_many_fail_timeout">S个正下载，F个因断网添加失败</string>
    <string name="download_many_fail_no_space">S个正下载，空间不足F个未下载，请删些内容</string>
    <string name="download_many_fail_unknown_error">S个正下载，F个不明原因失败</string>
    <string name="download_cannot_ues_3g">已设置为2G/3G/4G下不允许下载视频</string>
    <string name="my_cache">我的下载</string>
    <string name="my_history">观看记录</string>
    <string name="my_favorite">我的收藏</string>
    <string name="my_subscribe">我的订阅</string>
    <string name="user_login_tip_subscribe">订阅请先登录</string>
    <string name="mycenter_favorite_empty">还未收藏任何内容</string>
    <string name="mycenter_upload_upload_empty">还未上传任何内容</string>
    <string name="tips_no_cache">还未下载任何视频</string>
	<string name="mycenter_setting_success">设置成功</string>
    <string name="mycenter_setting_cache_success">缓存已清除 </string>
    <string name="mycenter_setting_already_latest_version">当前版本是最新版</string>
    <string name="user_login_tip_favorite">收藏请先登录</string>
    <string name="user_login_tip_upload">上传请先登录</string>
    <string name="mycenter_upload_video_tip_sdcard_local">请插入SD卡</string>
    <string name="mycenter_upload_video_tip_sdcard_new">请插入SD卡来存储您拍摄的视频</string>
	<string name="upload_no_network">网络已断开，正在上传的视频将在网络连接后恢复续传</string>
	<string name="webview_mail_app_not_found">您的手机木有安装邮箱</string>
    <string name="mycenter_setting_play_setting">播放设置</string>
    <string name="mycenter_setting_play_prefer_hd2">优先播放超清</string>
    <string name="mycenter_setting_play_prefer_hd">优先播放高清</string>
    <string name="mycenter_setting_play_prefer_flv">优先播放标清</string>
    <string name="mycenter_setting_play_open_volumn_gesture">开启音量调节手势</string>
    <string name="mycenter_setting_play_open_light_gesture">开启亮度调节手势 </string>
    <string name="mycenter_setting_play_open_speed_gesture">开启快进快退手势</string>
    <string name="mycenter_setting_play_language">优先播放</string>
    <string name="mycenter_setting_cache_item_text">下载设置</string>
    <string name="mycenter_setting_cache_prefer_hd2">优先下载超清</string>
    <string name="mycenter_setting_cache_prefer_hd">优先下载高清</string>
    <string name="mycenter_setting_cache_prefer_flv">优先下载标清</string>
    <string name="mycenter_setting_cache_language">优先下载</string>
  <string name="soku_dialog_txt_cancel">取消</string>
	<string name="qrcode_result_no_right_tt">该视频无移动设备版权，优酷将为您跳到浏览器播放</string>
	<string name="qrcode_result_no_result_white_tt">非常抱歉，没有扫描到视频或登录信息</string>
	<string name="qrcode_result_restart_scan">重新扫描</string>
	<string name="qrcode_result_bellow_player">二维码在Youku页面播放器的下方</string>
	<string name="qrcode_result_need_network">需要有网络连接才能扫到视频地址</string>
	<string name="qrcode_result_keep_camera_no_tilt">尽量保持摄像头不要倾斜</string>
</resources>