<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/homepage_title_height"
        android:background="#FFFFFF"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/subtitle_margin"
        android:paddingRight="@dimen/subtitle_margin" >

        <TextView
            style="@style/homepagetitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:shadowDy="10"
            android:shadowRadius="2"
            android:text="@string/saosao" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="4px"
        android:layout_alignParentBottom="true"
        android:background="@drawable/tab_shadow" />

    <LinearLayout
        android:id="@+id/layout_soku_dialog"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_soku_dialog_height"
        android:background="@color/white"
        android:layout_marginLeft="16px"
        android:layout_marginRight="16px"
        android:layout_marginTop="18px" 
        android:orientation="vertical">

        <TextView
            android:id="@+id/soku_dialog_txt"
            style="@style/soku_dialog_txt_cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/soku_dialog_txt_maginleftright"
            android:layout_marginRight="@dimen/soku_dialog_txt_maginleftright"
            android:text="即将在电视上登录您的账号"
            android:gravity="center"
            android:layout_weight="1"
            android:lineSpacingExtra="@dimen/soku_dialog_txt_linespacingextra" />

        <RelativeLayout
            android:id="@+id/layout_soku_dialog_bottom"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_soku_dialog_bottom_height"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <LinearLayout
                    android:id="@+id/layout_soku_dialog_cancel"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#fffafafa"
                    android:gravity="center" >

                    <TextView
                        android:id="@+id/soku_dialog_txt_cancel"
                        style="@style/soku_dialog_txt_cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/soku_dialog_txt_cancel" />
                </LinearLayout>

                <View
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:background="#2c5e5e5e" />

                <View
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:background="#ffffffff" />

                <LinearLayout
                    android:id="@+id/layout_soku_dialog_goplay"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#1500baff"
                    android:gravity="center" >

                    <TextView
                        android:id="@+id/soku_dialog_txt_goplay"
                        style="@style/soku_dialog_txt_goplay"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/confirm" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="5px"
                android:layout_alignParentTop="true"
                android:background="@drawable/soku_layout_bottom_cover" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>